--- a/style.scss
+++ b/style.scss
@@ -18,16 +18,21 @@ html {
 }
 
 body {
-	background: $white;
+
   font: 18px/1.4 $helvetica;
   color: $darkGray;
+  background: $white;
 }
 
 .container {
   margin: 0 auto;
-  max-width: 740px;
   padding: 0 10px;
   width: 100%;
+}
+
+#main.container {
+  max-width: 740px;
+  box-shadow: 0 4px 8px 0 rgba(96, 128, 143, 0.731);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -39,15 +44,20 @@ h1, h2, h3, h4, h5, h6 {
   margin: 1em 0 15px;
   padding: 0;
 
-  @include mobile {
-    line-height: 1.4;
-  }
+  // @include mobile {
+  //   line-height: 1.4;
+  // }
 }
 
 h1 {
-  font-size: 30px;
+  font-weight: normal !important;
   a {
+    font-family: 'Helmet';
     color: inherit;
+    font-size: 40px;
+    span {
+      font-size: 24px
+    }
   }
 }
 
@@ -151,29 +161,29 @@ img {
 //
 
 .wrapper-masthead {
-  margin-bottom: 50px;
+  border-bottom: 2 pix solid gray;
+  // background-color: $white;
+  // background-color: $lightBlue;
 }
 
 .masthead {
-  padding: 20px 0;
+  padding: 10px 0 0 0;
   border-bottom: 1px solid $lightGray;
 
-  @include mobile {
-    text-align: center;
-  }
+  // @include mobile {
+  //   text-align: center;
+  // }
 }
 
 .site-avatar {
   float: left;
-  width: 70px;
-  height: 70px;
-  margin-right: 15px;
+  width: 150px;
 
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
+  // @include mobile {
+  //   float: none;
+  //   display: block;
+  //   margin: 0 auto;
+  // }
 
   img {
     border-radius: 5px;
@@ -183,32 +193,144 @@ img {
 .site-info {
   float: left;
 
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
+  // @include mobile {
+  //   float: none;
+  //   display: block;
+  //   margin: 0 auto;
+  // }
 }
 
 .site-name {
   margin: 0;
-  color: $darkGray;
+  color: $blue;
   cursor: pointer;
   font-family: $helveticaNeue;
-  font-weight: 300;
-  font-size: 28px;
+  font-weight: 800;
+  font-size: 24px;
   letter-spacing: 1px;
 }
 
-.site-description {
-  margin: -5px 0 0 0;
-  color: $gray;
-  font-size: 16px;
+section#splash {
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#7abcff+0,60abf8+44,4096ee+100;Blue+3D+%2314 */
+  background: linear-gradient(to right, rgb(46, 147, 249) 0%, rgb(96, 171, 248) 44%, rgb(64, 150, 238) 100%);
+  background-size: 300% 100%;
+  animation: moveGradient 10s linear infinite;
 
-  @include mobile {
-    margin: 3px 0;
+  display: flex;
+  .box {
+    width: 50%;
+    box-sizing: border-box;
+    &.box-with-img {
+      align-self: end;
+    }
+    img {
+      aspect-ratio: auto;
+      width: 100%;
+      height: auto;
+
+    }
+  }
+  .splash-right {
+    padding-top: 0;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+    
+    h2.cloudskin {
+      font-weight: 300;
+      @include xl {
+        margin-top: 30px;
+        font-size: 60pt;
+      }
+      @include lg {
+        margin-top: 15px;
+        font-size: 36pt;
+      }
+
+      @include md {
+        font-size: 36pt;
+      }
+
+      @include sm {
+        font-size: 24pt;
+      }
+    }
+    h5.estetica-natural {
+      font-weight: 300;
+      text-transform: uppercase;
+      margin-bottom: 0px;
+      margin-top: 0;
+      padding-bottom: 0px;
+      padding-top: 0;
+
+      @include xl {
+        margin-top: -55px;
+        font-size: 36pt;
+      }
+      @include lg {
+        margin-top: -45px;
+        font-size: 24pt;
+      }
+
+      @include md {
+        margin-top: -40px;
+        font-size: 18pt;
+      }
+
+      @include sm {
+        margin-top: -30px;
+        font-size: 16pt;
+      }
+    }
+    h2, h5, .site-description {
+      color: $white;
+    }
+
+    // <uniquifier>: Use a unique and descriptive class name
+// <weight>: Use a value from 100 to 400
+
+    .playwrite-gb-s-200 {
+      font-family: "Playwrite GB S", cursive;
+      font-optical-sizing: auto;
+      font-weight: 200;
+      font-style: normal;
+    }
+    p.site-description {
+      font-size: 18pt;
+      margin: 0 0 20px 0;
+      font-weight: 700;
+      font-style: normal;
+      margin-top: 40px;
+      margin-bottom: 60px;
+      line-height: 30px;
+
+      @include sm {
+        font-size: 16pt;
+      }
+    }
+    a {
+      border-radius: 5px;
+      padding: 10px 15px;
+      background-color: white;
+      font-weight: bold;
+    }
   }
 }
+
+
+
+
+@keyframes moveGradient {
+  0% {
+      background-position: 0% 0%;
+  }
+  50% {
+      background-position: 100% 50%;
+  }
+  100% {
+      background-position: 0% 0%;
+  }
+}
+
 
 nav {
   float: right;
@@ -216,12 +338,12 @@ nav {
   font-family: $helveticaNeue;
   font-size: 18px;
 
-  @include mobile {
-    float: none;
-    margin-top: 9px;
-    display: block;
-    font-size: 16px;
-  }
+  // @include mobile {
+  //   float: none;
+  //   margin-top: 9px;
+  //   display: block;
+  //   font-size: 16px;
+  // }
 
   a {
     margin-left: 20px;
@@ -230,10 +352,18 @@ nav {
     font-weight: 300;
     letter-spacing: 1px;
 
-    @include mobile {
-      margin: 0 10px;
-      color: $blue;
-    }
+    // @include mobile {
+    //   margin: 0 10px;
+    //   color: $blue;
+    // }
+  }
+
+  & #fale-conosco {
+    background-color: $blue;
+    border-radius: 5px;
+    padding: 10px 15px;
+    color: $white;
+    font-weight: bold;
   }
 }
 
@@ -271,16 +401,52 @@ nav {
   }
 }
 
+
+.nowrap {
+  white-space: nowrap;
+}
 .wrapper-footer {
   margin-top: 50px;
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
-  background-color: $lightGray;
+  // background-color: $lightBlue;
+  background-color: $white;
 }
 
 footer {
   padding: 20px 0;
   text-align: center;
+}
+
+.card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  background-color: $white;
+  h4 {
+    text-transform: capitalize;
+    border-bottom-width: 2px;
+    border-bottom-style: solid;
+    border-image: linear-gradient(to right, rgb(132, 132, 133), rgb(255, 255, 255)) 5;
+  }
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.card-container {
+  padding: 2px 16px;
+}
+
+@font-face {
+  font-family: 'Helmet';
+  src: url('{{ site.baseurl }}/images/Helmet-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
