Adicionar seção sobre nós e localização da clínica

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/#sobre">Sobre</a>
-            <a href="{{ site.baseurl }}/#cllinica">Clínica</a>
+            <a href="{{ site.baseurl }}/#clinica">Clínica</a>
             <a href="{{ site.baseurl }}/#servicos">Serviços</a>
             <a id="fale-conosco" href="{{ site.whatsappLink }}">CONTATO</a>
           </nav>
