--- a/style.scss
+++ b/style.scss
@@ -32,7 +32,7 @@ body {
 
 #main.container {
   max-width: 740px;
-  box-shadow: 0 4px 8px 0 rgba(96, 128, 143, 0.731);
+  // box-shadow: 0 0 8px 0 rgba(96, 128, 143, 0.731);
 }
 
 h1, h2, h3, h4, h5, h6 {
