Adding whatsapp link and playing with gradients

--- a/style.scss
+++ b/style.scss
@@ -18,10 +18,10 @@ html {
 }
 
 body {
-
   font: 18px/1.4 $helvetica;
-  color: $darkGray;
-  background: $white;
+//  color: $darkGray;
+  background-image: linear-gradient( 135%, #ffffff 0%, #eee 100% );
+  background-size: cover;
 }
 
 .container {
@@ -448,6 +448,7 @@ footer {
   font-style: normal;
   font-display: swap;
 }
+
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
