Adding logo to about us and adding gradient line below headers

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,9 +4,7 @@
 //
 
 // Colors
-$blue: #4183C4;
 
-// Grays
 $black: #000;
 $darkerGray: #222;
 $darkGray: #333;
@@ -15,6 +13,7 @@ $lightGray: #eee;
 $white: #fff;
 $lightBlue: #e9f1f8;
 $blue: #4FADFF;
+$darkBlue: #4183C4;
 
 // Font stacks
 $helvetica: Helvetica, Arial, sans-serif;
