--- a/style.scss
+++ b/style.scss
@@ -410,7 +410,37 @@ nav {
   }
 }
 
+.responsive-iframe-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 50%; /* Aspect ratio: 300/600 = 0.5 or 50% */
+  height: 0;
+  overflow: hidden;
+}
 
+.responsive-iframe-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  max-width: 600px;
+  height: 100%;
+  max-height: 400px;
+  border: 0;
+}
+
+
+.swiper {
+  width: 480px;
+  height: 640px;
+}
+
+@media screen and (max-width: 479px){
+  .swiper {
+    width: 380px;
+    height: 520px;
+  }
+}
 .nowrap {
   white-space: nowrap;
 }
