--- a/style.scss
+++ b/style.scss
@@ -28,10 +28,11 @@ body {
   width: 100%;
 }
 
-#main.container {
-  max-width: 940px;
-  // box-shadow: 0 0 8px 0 rgba(96, 128, 143, 0.731);
+#main.container section {
+    max-width: 940px;
+    margin: auto;
 }
+
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
@@ -67,6 +68,7 @@ h2 {
 h3 {
   font-size: 30px;
   color: $darkBlue;
+  padding-bottom: .5em;
   border-image: linear-gradient(to right, rgb(59, 119, 223), rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)) 5;
   border-bottom: 3px solid darkblue;
 }
@@ -418,15 +420,9 @@ nav {
   overflow: hidden;
 }
 
-.responsive-iframe-container iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  max-width: 600px;
-  height: 100%;
-  max-height: 400px;
-  border: 0;
+iframe {
+    width: 100%;
+    height: 400px;
 }
 
 
@@ -462,6 +458,10 @@ footer {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   background-color: $white;
+  padding: 0.2em 0.5em;
+  flex: 1 1 290px; /* Grow and shrink with a minimum size of 300px */
+  max-width: 290px;
+  box-sizing: border-box; /* Include padding and border in the element's total width and height */
   h4 {
     text-transform: capitalize;
     border-bottom-width: 2px;
@@ -473,11 +473,58 @@ footer {
 /* On mouse-over, add a deeper shadow */
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  background-color: #efefef;
 }
 
+
+/* Default styles for larger screens */
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+}
+
+/* Styles for smaller screens (e.g., mobile devices) */
+@media (max-width: 600px) {
+    .card {
+        flex: 1 1 100%; /* Full width for each item */
+        max-width: 100%; /* Ensure it does not exceed the screen width */
+    }
+}
 /* Add some padding inside the card container */
 .card-container {
+
   padding: 2px 16px;
+}
+
+/* MVV em três colunas se possível */
+
+.sobre-ct {
+  display: flex;
+  justify-content: space-between;
+}
+
+.sobre {
+  flex: 1;
+  margin: 0 10px;
+  box-sizing: border-box;
+}
+
+.sobre-ct > div {
+  flex: 1;
+  margin: 0 10px;
+  box-sizing: border-box;
+}
+
+@media (max-width: 768px) {
+  .sobre-ct {
+    flex-direction: column;
+  }
+
+  .sobre, .sobre-ct > div {
+    margin: 10px 0;
+  }
 }
 
 @font-face {
